--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - develop
-
 jobs:
   Deploy-Admin-Production:
     runs-on: ubuntu-latest
@@ -24,14 +23,14 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build Admin Project
         run: yarn nx build sillok-admin
-      - name: Create Vercel JSON Config (Admin)
+      - name: Create Vercel JSON Config
         run: |
           cat > apps/sillok-admin/vercel.json << 'EOL'
           {
             "version": 2,
             "framework": "vite",
             "buildCommand": "cd ../.. && yarn nx build sillok-admin",
-            "outputDirectory": "apps/sillok-admin/dist",
+            "outputDirectory": "../../apps/sillok-admin/dist",
             "rewrites": [
               {
                 "source": "/(.*)",
@@ -42,10 +41,14 @@ jobs:
           EOL
       - name: Install Vercel CLI
         run: npm install --global vercel
+      - name: Copy dist to apps/sillok-admin
+        run: |
+          mkdir -p apps/sillok-admin/dist
+          cp -r apps/sillok-admin/dist/* apps/sillok-admin/dist/
       - name: Deploy Admin Project to Vercel
         run: |
-          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd=apps/sillok-admin
-
+          cd apps/sillok-admin
+          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
   Deploy-User-Production:
     runs-on: ubuntu-latest
     environment: PROD
@@ -65,14 +68,14 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build User Project
         run: yarn nx build sillok-user
-      - name: Create Vercel JSON Config (User)
+      - name: Create Vercel JSON Config
         run: |
           cat > apps/sillok-user/vercel.json << 'EOL'
           {
             "version": 2,
             "framework": "vite",
             "buildCommand": "cd ../.. && yarn nx build sillok-user",
-            "outputDirectory": "dist/apps/sillok-user",
+            "outputDirectory": "../../dist/apps/sillok-user",
             "rewrites": [
               {
                 "source": "/(.*)",
@@ -83,6 +86,11 @@ jobs:
           EOL
       - name: Install Vercel CLI
         run: npm install --global vercel
+      - name: Copy dist to apps/sillok-user
+        run: |
+          mkdir -p apps/sillok-user/dist
+          cp -r dist/apps/sillok-user/* apps/sillok-user/dist/
       - name: Deploy User Project to Vercel
         run: |
-          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd=apps/sillok-user
+          cd apps/sillok-user
+          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
