--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - develop
 jobs:
-  Build-Projects:
+  Deploy-Projects:
     runs-on: ubuntu-latest
     environment: PROD
     steps:
@@ -30,53 +30,24 @@ jobs:
         run: |
           mkdir -p apps/sillok-user/dist
           cp -r dist/apps/sillok-user/* apps/sillok-user/dist/ || echo "No user build output found"
-      - name: Upload Admin Build
-        uses: actions/upload-artifact@v2
-        with:
-          name: admin-build
-          path: apps/sillok-admin
-      - name: Upload User Build
-        uses: actions/upload-artifact@v2
-        with:
-          name: user-build
-          path: apps/sillok-user
-
-  Deploy-Admin:
-    needs: Build-Projects
-    runs-on: ubuntu-latest
-    environment: PROD
-    steps:
-      - name: Download Admin Build
-        uses: actions/download-artifact@v2
-        with:
-          name: admin-build
-          path: admin
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_ADMIN_PROJECT_ID }}
-          working-directory: admin
-          vercel-args: '--prod'
-
-  Deploy-User:
-    needs: Build-Projects
-    runs-on: ubuntu-latest
-    environment: PROD
-    steps:
-      - name: Download User Build
-        uses: actions/download-artifact@v2
-        with:
-          name: user-build
-          path: user
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_USER_PROJECT_ID }}
-          working-directory: user
-          vercel-args: '--prod'
+          
+      - name: Install Vercel CLI
+        run: npm install -g vercel
+        
+      - name: Deploy Admin to Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_ADMIN_PROJECT_ID }}
+        run: |
+          cd apps/sillok-admin
+          vercel deploy --prod --token=$VERCEL_TOKEN
+          
+      - name: Deploy User to Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_USER_PROJECT_ID }}
+        run: |
+          cd apps/sillok-user
+          vercel deploy --prod --token=$VERCEL_TOKEN
