--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,28 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build Admin Project
         run: yarn nx build sillok-admin
+      - name: Prepare files for deployment
+        run: |
+          # 빌드 결과물 확인
+          ls -la apps/sillok-admin/dist || echo "No dist directory found"
+          # 결과물 복사를 위한 임시 폴더 생성
+          mkdir -p build-output/admin
+          # 모든 빌드 결과물 복사
+          cp -rv apps/sillok-admin/dist/* build-output/admin/ || echo "No files to copy"
+      - name: Create vercel.json
+        run: |
+          cat > build-output/admin/vercel.json << 'EOL'
+          {
+            "version": 2,
+            "public": true,
+            "rewrites": [
+              {
+                "source": "/(.*)",
+                "destination": "/index.html"
+              }
+            ]
+          }
+          EOL
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
@@ -27,7 +49,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_ADMIN_PROJECT_ID }}
-          working-directory: ./apps/sillok-admin
+          working-directory: ./build-output/admin
+          vercel-args: '--prod'
           
   Deploy-User-Production:
     runs-on: ubuntu-latest
@@ -45,6 +68,28 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build User Project
         run: yarn nx build sillok-user
+      - name: Prepare files for deployment
+        run: |
+          # 빌드 결과물 확인
+          ls -la apps/sillok-user/dist || echo "No dist directory found"
+          # 결과물 복사를 위한 임시 폴더 생성
+          mkdir -p build-output/user
+          # 모든 빌드 결과물 복사
+          cp -rv apps/sillok-user/dist/* build-output/user/ || echo "No files to copy"
+      - name: Create vercel.json
+        run: |
+          cat > build-output/user/vercel.json << 'EOL'
+          {
+            "version": 2,
+            "public": true,
+            "rewrites": [
+              {
+                "source": "/(.*)",
+                "destination": "/index.html"
+              }
+            ]
+          }
+          EOL
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
@@ -52,4 +97,5 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_USER_PROJECT_ID }}
-          working-directory: ./apps/sillok-user
+          working-directory: ./build-output/user
+          vercel-args: '--prod'
